[iOS] Exit omnibox preedit state on suggestion append.

Exits the preedit state upon appending a suggestion.

Bug: 859011
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I65809145b1f846157b24e1cc0b74035f235f834f
Reviewed-on: https://chromium-review.googlesource.com/1120025
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572547}
Former-commit-id: 228b95b40dc7e9dd77b81bc957911d4d4965e1c5